# izthon

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: publishing-github-actions.md
docs/plans/: 2026-02-04-iztro-python-migration.md
src/izthon/: __init__.py
src/izthon/astro/: __init__.py  _config.py  analyzer.py  astro.py  functional_astrolabe.py  functional_horoscope.py  functional_palace.py  functional_surpalaces.py  functional_surrounding_palaces.py  palace.py  plugin.py
src/izthon/data/: __init__.py  constants.py  earthly_branches.py  heavenly_stems.py  stars.py
src/izthon/i18n/: __init__.py
src/izthon/i18n/_catalogs/: en-US.json  ja-JP.json  ko-KR.json  vi-VN.json  zh-CN.json  zh-TW.json
src/izthon/lunar_lite/: __init__.py  constants.py  convertor.py  ganzhi.py  misc.py  types.py  utils.py
src/izthon/star/: __init__.py  adjective_star.py  decorative_star.py  functional_star.py  horoscope_star.py  location.py  major_star.py  minor_star.py
src/izthon/util/: __init__.py  utils.py
tests/: conftest.py  test_astro_analyzer.py  test_astro_astrolabe.py  test_astro_palace.py  test_astro_plugin.py  test_astro_with_options.py  test_lunar_lite_convertor.py  test_lunar_lite_ganzhi.py  test_lunar_lite_misc.py  test_star_index.py  test_star_location.py  test_util.py
tools/: generate_iztro_i18n_catalogs.py  run_smoke_tests.py
