[project]
name = "izthon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "破晓", email = "AHpx@yandex.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
izthon = "izthon:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
