[project]
name = "izthon"
version = "0.2.0"
description = "A Python toolkit for generating Zi Wei Dou Shu astrolabes."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "破晓", email = "AHpx@yandex.com" }
]
keywords = [
    "zi-wei-dou-shu",
    "astrolabe",
    "astrology",
    "iztro",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/TaoracleHQ/izthon"
Repository = "https://github.com/TaoracleHQ/izthon"
Issues = "https://github.com/TaoracleHQ/izthon/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
izthon = "izthon:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
